practice/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-shared-ingress
  namespace: exercises
spec:
  rules:
  - http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 3333
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 4444
